# utopia-cdn

./: Dockerfile.ic-prep  README.md  versions.json
.github/workflows/: ci.yml  publish-demo-cfg.yml  publish-images.yml
demo_cfg/: manageboot.sh  replica.1.json5  replica.2.json5  replica.3.json5  replica.4.json5  whitelist.json
demo_cfg/node-1/: ip6-node.txt  ip6-upgrader.txt
demo_cfg/node-2/: ip6-node.txt  ip6-upgrader.txt
demo_cfg/node-3/: ip6-node.txt  ip6-upgrader.txt  node.txt
demo_cfg/node-4/: ip6-node.txt  ip6-upgrader.txt  node.txt
gateway/: Dockerfile  gateway.sh
ic-prep/: Dockerfile  prep.sh
ic-prep/node_config_generator/: Cargo.toml
ic-prep/node_config_generator/src/: main.rs
ic-prep/registry_init_args_generator/: Cargo.toml  README.md  main.rs
node/: Dockerfile  manageboot.sh  node.sh
replica/: Dockerfile  node.sh
upgrader/: Dockerfile  upgrader.sh
